fixing partners logo alignment

--- a/ACTFoundation.Web/assets/css/style.css
+++ b/ACTFoundation.Web/assets/css/style.css
@@ -714,9 +714,12 @@ form button {
 }
 
 .footer-partner {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3rem;
   width: 100%;
   height: 8rem;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .footer-cta-more-button {
